@@ -19,6 +19,7 @@
 	  - Grudge (by Nephi)
 	  - MSGTYPE option (by Pasi Kallinen)
 	  - Sortloot (by Jukka Lahtinen)
+	    * changed to sort by description, BUC and enchantment
 	  - Quiver Fired Ammunition (by Jukka Lahtinen)
 
 	* user interface improvements:
